--- a/src/main/resources/templates/game.html
+++ b/src/main/resources/templates/game.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" th:href="@{/}">Quiz Application - pick options</a>
+      <a class="navbar-brand js-scroll-trigger" th:href="@{/}">Quiz Application - game</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -38,35 +38,20 @@
   </nav>
 
   <section id="options">
-    <form class="container" action="#" th:action="@{/select}" th:object="${gameOptions}" method="post">
+    <form class="container" action="#" th:action="@{/game}" th:object="${userAnswer}" method="post">
       <div class="form-row">
-        <div class="form-group">
-          <h4>Questions:</h4>
-          <label for="numberOfQuestionsInput">Number: </label>
-          <input class="form-control" name="numberOfQuestionsInput" id="numberOfQuestionsInput" th:field="*{numberOfQuestions}"
-                 type="number" min="1" max="20" step="1"/>
-        </div>
-        <div class="form-group">
-          <h4>Difficulty:</h4>
-          <th:block th:each="difficulty : ${T(pl.sdacademy.projektplus.quiz.frontend.Difficulty).values()}">
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="difficultyRadioOptions"
-                     th:id="'difficulty_' + ${difficulty}" th:value="${difficulty}" th:field="*{difficulty}">
-              <label class="form-check-label" th:for="'difficulty_' + ${difficulty}"
-                     th:text="${difficulty}"></label>
-            </div>
-          </th:block>
-        </div>
+        <h3 th:text="'Question ' + ${currentQuestionNumber} + '/' + ${totalQuestionNumber} + ':'"></h3>
+        <h4 th:text="${currentQuestion}"></h4>
       </div>
       <div class="form-row">
         <div class="form-group">
-          <h4>Category:</h4>
-          <th:block th:each="category : ${categories}">
+          <p>Select correct answer:</p>
+          <th:block th:each="answer,iter : ${currentQuestionAnswers}">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="categoryRadioOptions"
-                     th:id="'category_' + ${category.getId()}" th:value="${category.getId()}" th:field="*{categoryId}">
-              <label class="form-check-label" th:for="'difficulty_' + ${category.getId()}"
-                     th:text="${category.getName()}">
+              <input class="form-check-input" type="radio" name="answersRadioOptions"
+                     th:id="'answer_' + ${iter.current}" th:value="${answer}" th:field="*{answer}">
+              <label class="form-check-label" th:for="'answer_' + ${iter.current}"
+                     th:text="${answer}">
               </label>
             </div>
           </th:block>
@@ -74,7 +59,7 @@
       </div>
       <div class="form-row">
         <div class="form-group">
-          <button type="submit" class="btn btn-primary">Play!</button>
+          <button type="submit" class="btn btn-primary">Next</button>
         </div>
       </div>
     </form>
